fix logo-bar height on small width screen

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 #logoBar{
   width: 30vw;
-  height: 100vh;
+  height: 50vh;
   margin: 5px;
 }
 #siteLogo{
